@@ -586,3 +586,52 @@ Mon Jun 25 08:20:12 BST 2007
 
    o Valgrind long/multiple fit-proteins
 
+
+----
+Tue Jul  3 21:45:19 BST 2007
+
+   o better documentation for skip-to-next-ncs-chain
+
+
+-------------------
+Tue Jul  3 14:27:37 BST 2007
+
+   For Release 0.4
+
+   o Gtk Timeout for reading socket strings
+
+* Done in 0.3.2 in fact.
+
+   o Multiple model ligand overlaying
+
+* Done. GUI needed?
+
+   o Cootaneer
+
+* Done.
+
+   o Richardson rotamers
+
+   o Kevin's Ramachandran Refinement target
+
+   o Post-install slim the binaries
+
+   o Is there a memory problem in unshelx?
+
+   o unshelxing is interfering with go to atom from lst file reader.
+     How about this cunning plan:  
+     (shelx-lst-conversion-func imol) returns a function that takes
+     the lst residue number as an arg and returns a (list chain-id
+     resno).  The body of the returned func will depend on the output
+     of unshelx().
+
+    CMMDBManager *unshelx(CMMDBManager *mol);
+    need to also return mapping info
+    vector of 
+    [input_threash -> (chain-id resno-offset)]
+    i.e. if residue_num >= input_threash we have a given chain-id and resno offset.
+    run over all sets of [input_threash -> (chain-id resno-offset)] to get the 
+    correct offset
+
+
+-----
