@@ -2,10 +2,11 @@
  * 
  * Copyright 2002, 2003, 2004, 2005, 2006, 2007 The University of York
  * Author: Paul Emsley
+ * Copyright 2007 by Paul Emsley
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or (at
+ * the Free Software Foundation; either version 3 of the License, or (at
  * your option) any later version.
  * 
  * This program is distributed in the hope that it will be useful, but
@@ -15,7 +16,8 @@
  * 
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc.,  51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+ * 02110-1301, USA
  */
 
 #include <stdlib.h>
@@ -5282,6 +5284,27 @@ int write_shelx_ins_file(int imol, const char *filename) {
    }
    return istat;
 }
+
+
+#ifdef USE_GUILE
+SCM chain_id_for_shelxl_residue_number(int imol, int resno) {
+
+   SCM r = SCM_BOOL_F;
+   if (is_valid_model_molecule(imol)) {
+      std::pair<bool, std::string> ch =
+	 graphics_info_t::molecules[imol].chain_id_for_shelxl_residue_number(resno);
+      if (ch.first)
+	 r = scm_makfrom0str(ch.second.c_str());
+   } 
+   return r;
+} 
+#endif
+
+// Bernie code here for pythonized version...
+
+
+
+
 
 
 /*  ----------------------------------------------------------------------- */
