@@ -63,6 +63,12 @@ overlap_ligands(int imol_ligand, int imol_ref, const char *chain_id_ref,
    CResidue *residue_moving = 0;
    CResidue *residue_reference = 0;
 
+   // running best ligands:
+   CResidue *best_residue_moving = NULL;
+   double best_score = 99999999.9; // low score good.
+   clipper::RTop_orth best_rtop;
+   
+
    if (! is_valid_model_molecule(imol_ligand))
       return scm_status;
 
@@ -72,68 +78,79 @@ overlap_ligands(int imol_ligand, int imol_ref, const char *chain_id_ref,
    CMMDBManager *mol_moving = graphics_info_t::molecules[imol_ligand].atom_sel.mol;
    CMMDBManager *mol_ref    = graphics_info_t::molecules[imol_ref].atom_sel.mol;
    
-   int imod = 1;
-   CModel *model_p = mol_moving->GetModel(imod);
-   CChain *chain_p;
-   int nchains = model_p->GetNumberOfChains();
-   for (int ichain=0; ichain<nchains; ichain++) {
-      chain_p = model_p->GetChain(ichain);
-      int nres = chain_p->GetNumberOfResidues();
-      PCResidue residue_p;
-      for (int ires=0; ires<nres; ires++) { 
-	 residue_p = chain_p->GetResidue(ires);
-	 if (residue_p) { 
-	    int n_atoms = residue_p->GetNumberOfAtoms();
-	    if (n_atoms > 0) {
-	       residue_moving = residue_p;
-	       break;
-	    }
-	 }
-      }
-      if (residue_moving)
-	 break;
-   }
-
-   if (! residue_moving) {
-      std::cout << "Oops.  Failed to find moving residue" << std::endl;
-   } else { 
-      int imodel_ref = 1;
-      CModel *model_ref_p = mol_ref->GetModel(imodel_ref);
+   for (int imod=1; imod<=mol_moving->GetNumberOfModels(); imod++) { 
+      CModel *model_p = mol_moving->GetModel(imod);
       CChain *chain_p;
-      int nchains = model_ref_p->GetNumberOfChains();
+      int nchains = model_p->GetNumberOfChains();
       for (int ichain=0; ichain<nchains; ichain++) {
-	 chain_p = model_ref_p->GetChain(ichain);
-	 if (std::string(chain_p->GetChainID()) == std::string(chain_id_ref)) { 
-	    int nres = chain_p->GetNumberOfResidues();
-	    PCResidue residue_p;
-	    for (int ires=0; ires<nres; ires++) { 
-	       residue_p = chain_p->GetResidue(ires);
-	       if (residue_p) {
-		  int seqnum = residue_p->GetSeqNum();
-		  if (seqnum == resno_ref) {
-		     residue_reference = residue_p;
-		     break;
-		  }
+	 chain_p = model_p->GetChain(ichain);
+	 int nres = chain_p->GetNumberOfResidues();
+	 PCResidue residue_p;
+	 for (int ires=0; ires<nres; ires++) { 
+	    residue_p = chain_p->GetResidue(ires);
+	    if (residue_p) { 
+	       int n_atoms = residue_p->GetNumberOfAtoms();
+	       if (n_atoms > 0) {
+		  residue_moving = residue_p;
+		  break;
 	       }
 	    }
-	    if (residue_reference)
-	       break;
 	 }
+	 if (residue_moving)
+	    break;
       }
 
-      if (!residue_reference) {
-	 std::cout << "Oops.  Failed to find reference residue" << std::endl;
+      if (! residue_moving) {
+	 std::cout << "Oops.  Failed to find moving residue" << std::endl;
       } else { 
-	 std::pair<bool, clipper::RTop_orth> rtop_info =
-	    coot::graph_match(residue_moving, residue_reference);
-	 if (rtop_info.first) {
-	    graphics_info_t::molecules[imol_ligand].transform_by(rtop_info.second, residue_moving);
-	    scm_status = rtop_to_scm(rtop_info.second);
-	    graphics_draw();
-	 } else {
-	    std::cout << "Oops.  Match failed somehow" << std::endl;
-	 } 
-      } 
+	 int imodel_ref = 1;
+	 CModel *model_ref_p = mol_ref->GetModel(imodel_ref);
+	 CChain *chain_p;
+	 int nchains = model_ref_p->GetNumberOfChains();
+	 for (int ichain=0; ichain<nchains; ichain++) {
+	    chain_p = model_ref_p->GetChain(ichain);
+	    if (std::string(chain_p->GetChainID()) == std::string(chain_id_ref)) { 
+	       int nres = chain_p->GetNumberOfResidues();
+	       PCResidue residue_p;
+	       for (int ires=0; ires<nres; ires++) { 
+		  residue_p = chain_p->GetResidue(ires);
+		  if (residue_p) {
+		     int seqnum = residue_p->GetSeqNum();
+		     if (seqnum == resno_ref) {
+			residue_reference = residue_p;
+			break;
+		     }
+		  }
+	       }
+	       if (residue_reference)
+		  break;
+	    }
+	 }
+
+	 if (!residue_reference) {
+	    std::cout << "Oops.  Failed to find reference residue" << std::endl;
+	 } else { 
+	    coot::graph_match_info_t rtop_info =
+	       coot::graph_match(residue_moving, residue_reference);
+	    if (rtop_info.success) {
+	       if (rtop_info.dist_score < best_score) { // low score good.
+		  best_score = rtop_info.dist_score;
+		  best_residue_moving = residue_moving;
+		  scm_status = rtop_to_scm(rtop_info.rtop);
+		  best_rtop = rtop_info.rtop;
+	       }
+	    } else {
+	       // std::cout << "Oops.  Match failed somehow" << std::endl;
+	    }
+	 }
+      }
+   }
+   if (best_residue_moving) {
+      // move just the best ligand:
+      graphics_info_t::molecules[imol_ligand].transform_by(best_rtop, best_residue_moving);
+      // delete everything except the best ligand:
+      graphics_info_t::molecules[imol_ligand].delete_all_except_res(best_residue_moving);
+      graphics_draw();
    }
    return scm_status;
 }
